# OZark-wallet

./: README.md  package.json
.github/workflows/: android-release.yml  android.yml  gateway-ci.yml  secret-scan.yml
gateway/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
gateway/deploy/: DEPLOY.md  docker-compose.yml  env.example  torrc
gateway/src/: auth.rs  backup.rs  config.rs  error.rs  fees.rs  main.rs  reconcile.rs  registry.rs  security.rs  state.rs  tapd.rs
gateway/src/routes/: mod.rs
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  kdf.rs  lib.rs  tapd_defaults.rs
src-tauri/src/ark/: service.rs
src-tauri/src/backup/: crypto.rs
src-tauri/src/gateway/: client.rs  commands.rs  mod.rs
src-tauri/src/market/: commands.rs  curve.rs  desk.rs  desk_listener.rs  identity.rs  mod.rs  nostr_client.rs  settle.rs  store.rs
src-tauri/src/taproot/: client.rs
src-tauri/src/tor/: service.rs
src-tauri/src/wallet/: vault.rs
src/components/: UpdateBanner.tsx
src/i18n/: strings.ts
src/lib/: paymentInput.ts
src/screens/: Ark.tsx  Dashboard.tsx  Gateway.tsx  Lightning.tsx  Market.tsx  TaprootAssets.tsx
